--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 2.0.00-dev
  = Fixed bug where Green Terra didn't work on Stone Brick
  = Fixed bug where Tree Feller could be used without permissions
  = Fixed exploit where falling sand & gravel weren't tracked
+ = Fixed exploit where Acrobatics could be leveled via Dodge on party members.
  ! Changed PTP to prevent teleporting if you've been hurt in the last 30 seconds (configurable)
  ! Changed Chimera Wing failure check to use the maxWorldHeight.
  ! Changed inspect failed message to say inspect rather than whois
