--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,9 @@ Key:
 
 Version 1.4.03-dev
  + Added option to advanced.yml to determine the # of enchant levels used when buffing Super Breaker & Giga Drill Breaker
+ = Fixed bug where Green Thumb would consume wheat instead of seeds
+ = Fixed bug where Green Terra would consume twice the amount of seed when used on crops
+ = Fixed bug where experience would be awarded in Herbalism for some player-placed blocks
  = Fixed bug where players were unable to salvage leather armor
  = Fixed bug with repairing using materials with byte metadata
  = Fixed bug where Fishing was becoming less successful at higher levels
