--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,6 +20,7 @@ Version 1.4.06-dev
  + Added configurable cooldown and warmup times when using /ptp
  + Added a new Party item share category "Misc" which contains a list of configurable items. (By default all tools and armor)
  + Added fishing exploit prevention
+ + Added permission node to bypass the fishing exploit prevention
  + Added boosts to Fishing chance depending on conditions
  + Added McMMOAbilityActivateEvent and McMMOAbilityDeactivateEvent
  + Added config option to toggle the size of fireworks
